Changes to template as described in readme
The first page of each chapter shows the chapter number in a very big font above the title, similar to the classicthesis template.
Section titles are preceded by the section number.
Section titles have a bigger font and are not italized.
It supports Parts (e.g. Part I, Part II), which also appear in the table of contents.
The table of content shows the chapter and section numbers next to their titles.
The cover is very simple and doesn't show any university-specific information (for MIT's version, check Tiff's template).
The pages before the "main matter" (the main content of the thesis after the cover, table of contents, acknowledgments, etc) are numbered with arabic characters (i, ii, iii). The first page of the "main matter" uses numbers starting from 1.
It adds the trabstractpage command for adding a translated abstract, ideal for universities that require an additional abstract in the local language.

--- a/chap1.tex
+++ b/chap1.tex
@@ -4,7 +4,7 @@
 %% You can process specific files by typing their names in at the 
 %% \files=
 %% prompt when you run the file main.tex through LaTeX.
-\chapter{1. Introduction}
+\chapter{Introduction}
 
 \begin{quote}
 \textit{In this chapter, I describe my introduction. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis dolor bibendum, lobortis mauris a, sollicitudin lacus.} \newline
@@ -18,7 +18,7 @@ Sed nec suscipit ex. Ut quis urna interdum tortor sollicitudin iaculis. Aliquam 
 
 Vivamus elementum vehicula orci id mollis. Duis auctor sapien vel pretium bibendum. Nam aliquam, felis at efficitur pretium, justo libero cursus nisi, sit amet molestie metus massa nec sapien. Donec efficitur porttitor arcu et tempus. Phasellus pretium, diam id suscipit ultrices, lectus odio suscipit risus, at fermentum leo massa vitae eros. Donec elit orci, faucibus et aliquet quis, interdum eget lorem. Nulla a tincidunt odio, vitae commodo metus. Pellentesque bibendum cursus.
 
-\begin{marginfigure}[{-10cm}]
+\begin{marginfigure}[{-1cm}]
  	\includegraphics[width=\textwidth]{chap1/spin}               
  	 \caption{Check it out, it's a Spin margin figure \url{spin.media.mit.edu}}
   	\label{fig:spin_margin}
@@ -44,3 +44,4 @@ Phasellus eu nunc eget ante hendrerit porta. Etiam dignissim, mauris vitae luctu
   \caption{A meaningless table}
   \label{tab:sample_table}
 \end{table}
+
